--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
     "chai": "^3.5.0",
     "express": "^4.15.2",
+    "log4js": "^1.1.1",
     "mocha": "^3.3.0",
-    "nunjucks": "^3.0.0",
-    "sequelize": "^3.30.4",
-    "supertest": "^3.0.0"
+    "mongoose": "^4.9.6",
+    "nunjucks": "^3.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
