--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --config webpack/dev.js",
+    "dev": "nodemon --config nodemon.json server",
+    "start": "npm run build && pm2 start pm2.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,9 +22,11 @@
     "mocha": "^3.3.0",
     "mongoose": "^4.9.6",
     "nunjucks": "^3.0.0",
+    "vhost": "^3.0.2",
     "wechat": "^2.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -31,11 +36,16 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
+    "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
+    "postcss-smart-import": "^0.6.12",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
