--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack --config webpack/dev.js",
-    "dev": "nodemon --config nodemon.json server",
+    "dev": "nodemon -w --dump server",
     "start": "npm run build && pm2 start pm2.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
     "log4js": "^1.1.1",
     "mocha": "^3.3.0",
     "mongoose": "^4.9.6",
+    "mz": "^2.6.0",
     "nunjucks": "^3.0.0",
     "vhost": "^3.0.2",
     "wechat": "^2.1.0"
@@ -38,6 +39,7 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
+    "nodemon": "^1.11.0",
     "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.6.12",
