--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack-template",
+  "name": "juhe.im",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -23,6 +23,8 @@
     "mongoose": "^4.9.6",
     "mz": "^2.6.0",
     "nunjucks": "^3.0.0",
+    "sequelize": "^3.30.4",
+    "sqlite3": "^3.1.8",
     "vhost": "^3.0.2",
     "wechat": "^2.1.0"
   },
@@ -39,10 +41,12 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.6.12",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
